<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOperationActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/addOperationRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/operationIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/addOperationIncomeRB"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/incomeAccountSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/daysOfWeek"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/incomeEnterValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autofillHints="no"
                    android:hint="@string/addOperationIncomeValueHint"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/incomeAccountSpinner" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <RadioButton
                android:id="@+id/operationCosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/addOperationCostsRB"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCosts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/costsAccountSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/daysOfWeek"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/costsExpensesSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:entries="@array/daysOfWeek"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/costsAccountSpinner" />

                <EditText
                    android:id="@+id/costsEnterValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autofillHints="no"
                    android:hint="@string/addOperationCostsValueHint"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/costsExpensesSpinner" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <RadioButton
                android:id="@+id/operationAccountsExchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/addOperationAccExChangeRB"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutAccExChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/fromAccountSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/daysOfWeek"
                    android:prompt="@string/addOperationFromAcc"
                    android:spinnerMode="dialog"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/toAccountSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:entries="@array/daysOfWeek"
                    android:prompt="@string/addOperationToAcc"
                    android:spinnerMode="dialog"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fromAccountSpinner" />

                <TextView
                    android:id="@+id/currencyOfFirstAccTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="USD"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toAccountSpinner" />

                <EditText
                    android:id="@+id/exChangeValueFromAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:gravity="center"
                    android:hint="@string/addOperationExChangeValueFromAcc"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/currencyOfFirstAccTextView" />

                <TextView
                    android:id="@+id/exChangeRatesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/addOperationExchangeRates"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exChangeValueFromAcc" />

                <EditText
                    android:id="@+id/exChangeValueRates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:gravity="center"
                    android:hint="@string/addOperationExchangeRatesHint"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/exChangeRatesTextView" />

                <TextView
                    android:id="@+id/currencyOfSecondAccTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="BYN"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exChangeValueRates" />

                <EditText
                    android:id="@+id/exChangeValueToAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:gravity="center"
                    android:hint="@string/addOperationExChangeValueFromAcc"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/currencyOfSecondAccTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RadioGroup>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>